--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   /*
   background-image: url(./assets/bg-mobile.jpg);
@@ -10,10 +16,26 @@ body {
   background: url(./assets/bg-mobile.jpg) no-repeat top center/cover;
 }
 
+body * {
+  font-family: "Inter", sans-serif;
+  color: #ffffff;
+}
+
 #container {
   width: 360px;
-  height: 712px;
-  border: 1px solid red;
   margin: auto;
-  
+}
+
+#profile {
+  text-align: center;
+}
+
+#profile img {
+  width: 112px;
+}
+
+#Profile p {
+  font-weight: 500;
+  line-height: 24px;
+  margin-top: 8px;
 }
