--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@
   --surface-color: rgba(255, 255, 255, 0.05);
   --surface-color-hover: rgba(0, 0, 0, 0.02);
   --highlight-color: rgba(255, 255, 255, 0.02);
-  --switch-bg-url: url(Assets/moon-stars.svg);
 }
 
 body {
@@ -29,27 +28,38 @@ body {
 body * {
   font-family: "Inter", sans-serif;
   color: #ffffff;
+  text-align: center;
 }
 
 #container {
   width: 360px;
-  margin: 56px auto 0px;
-  padding: 0 24px;
+  text-align: center;
+  margin: auto;
 }
 
 #profile {
   text-align: center;
-  padding: 24px;
+  padding: 16px 24px;
+  font-style: italic;
+  margin-top: 8px;
 }
 
+h3 {
+  margin: 32px auto 24px;
+}
 #profile img {
   width: 112px;
 }
 
-#Profile p {
+span {
+  color: darkgoldenrod;
+}
+
+#Profile ul {
   font-weight: 500;
   line-height: 24px;
   margin-top: 8px;
+  padding: 24px;
 }
 
 /* links */
@@ -58,7 +68,7 @@ ul {
   display: flex;
   flex-direction: column;
   gap: 16px;
-  padding: 24px 0;
+  padding: 13px 0;
 }
 
 ul li a {
@@ -85,4 +95,17 @@ ul li a {
 ul li a:hover {
   background: var(--surface-color-hover);
   border: 1.5px solid var(--text-color);
+}
+
+#line {
+  width: 360px;
+
+  margin: 16px auto 8px;
+  border: 2px #b8860b solid;
+  text-align: center;
+}
+
+footer {
+  margin: 16px auto 16px;
+  text-align: center;
 }
